feat: 커리어 자동 실행 비용과 예산 후보 탐색·협상 가격·해외 성적 재정 개선